# ai-advisor-agent-harness

./: .gitignore  AGENTS.md  DECISIONS.md  Makefile  README.md  done_check.sh  feature_list.json  lint_check.sh  main.py  progress.md  pyproject.toml  requirements.txt  server.py  session-handoff.md  首次搭建建议agent+rag项目.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
hooks/: pre-commit
src/: __init__.py  orchestrator.py
src/core/: __init__.py  intent_parser.py  knowledge_retriever.py  summarizer.py  task_decomposer.py  tool_executor.py
src/learning/: __init__.py  bad_case_catcher.py  case_classifier.py  feedback_loop.py  feedback_loop_orchestrator.py  rule_extractor.py
src/memory/: __init__.py  cold_memory.py  hot_memory.py  memory_manager.py  memory_recorder.py  memory_retriever.py  warm_memory.py
src/production/: __init__.py  circuit_breaker.py  concurrency_optimizer.py  gray_test.py  permission_control.py
src/reflection/: __init__.py  agent_debate.py  conflict_detector.py  fallback_handler.py  self_correction.py
src/utils/: __init__.py  config.py  logger.py  validators.py
tests/: __init__.py  test_basic.py  test_core.py  test_feedback_loop_integration.py  test_frontend.py  test_integration.py  test_learning.py  test_memory.py  test_memory_integration.py  test_memory_retrieval.py  test_permission_concurrency.py  test_production.py  test_reflection.py
