[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-advisor-agent"
version = "0.1.0"
description = "AI Agent + RAG project for generating decision reports and AI knowledge Q&A"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
keywords = ["ai", "agent", "rag", "llm", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "neo4j>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sprog-man/ai-advisor-agent-harness"
Repository = "https://github.com/sprog-man/ai-advisor-agent-harness"
Issues = "https://github.com/sprog-man/ai-advisor-agent-harness/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true